# LSPBE-LD-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: ARTIFACTS_MAP.md  final_qasper_50paper_recomputed_baseline_compare.json  final_qasper_50paper_recomputed_baseline_compare.md  final_qasper_baseline_compare_recomputed.md  final_qasper_model_results.json  final_qasper_model_results_recomputed.json  final_qasper_model_summary.md  final_verification_note.md  mve_debug_10_examples.md  mve_debug_10_results.json  mve_doc_constrained_50_bridge_v2_master_results.csv  mve_doc_constrained_50_bridge_v2_summary.md  mve_doc_constrained_50_examples.md  mve_doc_constrained_50_master_results.csv  mve_doc_constrained_50_streamlined_examples.md  mve_doc_constrained_50_streamlined_master_results.csv  mve_doc_constrained_50_streamlined_question_outcomes.csv  mve_doc_constrained_50_summary.md  qasper_segmentation_study_50_examples.md  qasper_segmentation_study_50_results.csv  qasper_segmentation_study_50_results.json
configs/: reproduction.template.json
data/: qasper_subset_debug_50.json  qasper_train_fast50.json  qasper_train_tiny.json
docs/: algorithm_spec.md  answer_eval_protocol.md  bucket6_1_public_path_audit.md  bucket6_cleanup_change_log.md  eval_protocol.md  experiment_chronology.md  final_full_qasper_run_plan.md  final_repo_guide.md  final_research_record.md  retrieval_metrics.md  retrospective_analysis.md  runtime_run_policy.md  subset_definitions.md  technical_debt_and_next_steps.md  what_we_did_and_did_not_do.md
scripts/: README.md  run_mve.py  (+25 more)
(+483 files in other folders)
